--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=Blog;User ID=ABCTest;Password=ABC!@#123;Trusted_Connection=False; TrustServerCertificate=True;"
+  },
+  "JwtKey": "ZmVkYWY3ZDg4NjNiNDhlMTk3YjkyODdkNDkyYjcwOGU=",
+  "ApiKeyName": "api_key",
+  "ApiKey": "curso_api-IlTevUM/z0ey3NwCV/unWg==",
+  "Smtp": {
+    "Host": "smtp.sendgrid.net",
+    "Port": "587",
+    "UserName": "apikey",
+    "Password": "suasenha"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
