--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "Env": "prod",
   "ConnectionStrings": {
     "DefaultConnection": "Server=127.0.0.1,1433;Database=Blog;User ID=ABCTest;Password=ABC!@#123;Trusted_Connection=False; TrustServerCertificate=True;"
   },
