--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Env": "prod",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1,1433;Database=Blog;User ID=ABCTest;Password=ABC!@#123;Trusted_Connection=False; TrustServerCertificate=True;"
+    "DefaultConnection": "Server=127.0.0.1,1433;Database=Blog;User ID=sa;Password=1q2w3e4r@#$;Trusted_Connection=False; TrustServerCertificate=True;"
   },
   "JwtKey": "ZmVkYWY3ZDg4NjNiNDhlMTk3YjkyODdkNDkyYjcwOGU=",
   "ApiKeyName": "api_key",
